--- a/headerstyle.css
+++ b/headerstyle.css
@@ -12,8 +12,11 @@
 }
 .topnav {
     background-color: #1da4ed;
-    overflow: hidden;
     border-radius: 15px;
+    font-family: 'Barlow', sans-serif;
+    font-weight: 300;
+    height: 60px;
+    width: 100%;
 }
 #logoa {
     display: inline-block;
@@ -21,7 +24,7 @@
 }
 .topnav a {
     float: left;
-    color: #f2f2f2;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -32,4 +35,92 @@
 }
 .topnav a.active {
     color: #221d23;
+}
+/* Dropdown Button */
+.dropbtn {
+    color: white;
+    border: none;
+    vertical-align: middle;
+    font-family: 'Barlow', sans-serif;
+    font-size: 25px;
+    background-color: #1da4ed;
+    display: inline-block;
+    height: 60px;
+}
+  /* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+  /* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #1da4ed;
+    width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+  /* Links inside the dropdown */
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+  /* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+    color: black;
+  }
+  /* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {color: #221d23;}
+.arrow-down {
+  width: 0; 
+  height: 0; 
+  border-left: 7px solid transparent;
+  border-right: 7px solid transparent;
+  border-top: 7px solid white;
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 5px;
+}
+.dropbtn:hover .arrow-down {
+  border-top: 7px solid #221d23;
+}
+.hideone {
+  display: block;
+}
+.dropdown:hover .arrow-down {border-top: 7px solid #221d23}
+@media(max-width: 750px) {
+  .hideone {
+    display: none;
+  }
+}
+@media(max-width: 600px){
+  .topnav a {
+    font-size: 15px;
+    text-align: center;
+    position: relative;
+    top: -8px;
+  }
+  .topnav {
+    height: 30px;
+    display: inline-block;
+  }
+}
+@media(max-width: 650px){
+  .dropdown {
+    display: none;
+  }
+}
+#limited {
+  text-align: center;
+  display: none;
+}
+@media(max-width: 750px) {
+  #limited {
+    display: block;
+  }
 }
