--- a/headerstyle.css
+++ b/headerstyle.css
@@ -54,6 +54,7 @@
 .dropdown {
     position: relative;
     display: inline-block;
+    vertical-align: middle;
 }
   /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
